--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.6.3",
     "jspdf": "^3.0.1",
     "mermaid": "^11.6.0",
     "next": "15.2.4",
